# skill_wrapper

./: .gitignore  .gitmodules  README.md  daily_log.md  hypo_test.yaml  manipulathor_req.txt  pred_state.yaml  pyproject.toml  skill.yaml
baselines/: vila.py
downward_examples/: Run_Downward.md  domain_exp_33.pddl  domain_exp_35.pddl  domain_exp_49.pddl  domain_kitchen.pddl  domain_kitchen_simple.pddl  domain_simple.pddl  probelm_exp_49.pddl  problem_exp_33.pddl  problem_exp_35.pddl  problem_kitchen.pddl  problem_kitchen_simple.pddl  problem_simple.pddl  run.py
example_dorfl_result/: grounded_predicate_truth_value_log.yaml  lifted_pred_list.yaml  skill2operator.pkl  skill2operator.yaml  tasks.yaml
manipulathor_environment/: manipulathor.py  model_suite.py
models/: model_suite copy.py  model_suite.py  pick_up_data.csv  pickup_data_skill.csv  put_down_data.csv  putdown_data_skill.csv  temp.csv  toggle_on_data.csv  toggleoff_data_skill.csv  toggleon_data_skill.csv  turn_off_data.csv
omnigibson/: behavior_env_example.py  grasping_mode_example.py  mixed_example.py  scene_selector.py  solve_simple_task.py
omnigibson_scripts/: =0.26.1  grasping_mode_example.py  ik_example.py  load_object_example.py  mixed_example.py  navigation_env_demo.py  robot_control_example.py  sample_kinematic_demo.py  saved_stage.json  scene_selector.py  solve_simple_task.py  state_save_load_example.py  test_ik.py  test_mobile_manipulation_task.py  test_symbolic_mobile_manipulation.py
planning/: domain_prototype.pddl  dorfl_oracle_operators.yaml  dorfl_oracle_predicates.yaml  dorfl_oracle_problem-1.pddl  dorfl_problem_template.pddl  lifted_pred_list.yaml  oracle_dorfl_operators.yaml  plan.py  skill2operator.yaml  skillwrapper_domain.pddl  spot.yaml
(+465 files in other folders)
