[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillwrapper"
version = "0.1.0"
description = "Adapt and symbolize skills in novel environments"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "openai",
    "sentence-transformers",
]

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"] # Include packages at these paths


### Configuration for the Ruff formatter/linter ###
[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["ALL"] # Default to all Ruff rules, add ignores as needed
ignore = [
    "D203",   # No blank line between class definition and its docstring
    "D213",   # Place docstring summary immediately after the opening quotes
    "TRY003", # Permit defining exception messages at point of raising
]
unfixable = ["F401"] # Disable 'fix' for unused imports

# Allow omission of return type on __init__
flake8-annotations = { mypy-init-return = true }

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101"]   # Allow assertions in test files
"**/scripts/*" = ["T201"] # Allow print statements in scripts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"